# tickets-api

./: .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
.github/actions/run_task/: action.yml
.github/workflows/: ci.yml  main.yml
migrations/: env.py
migrations/versions/: 5046525fa816_.py  58613b0c444c_.py  89d70a2075e6_.py  c83278a22fa3_.py
tests/: conftest.py
tests/database/: test_tickets.py
tests/routers/: categories_test.py  conftest.py  healthcheck_test.py  tickets_test.py
tickets_api/: app_factory.py  config.py  main.py
tickets_api/clients/: account_client.py
tickets_api/database/: repository.py
tickets_api/database/models/: __init__.py  base.py  category.py  ticket.py
tickets_api/repository/: ticket.py
tickets_api/routers/: categories.py  healthcheck.py  tickets.py
tickets_api/schemas/: category.py  ticket.py
tickets_api/services/: category_service.py  ticket.py  ticket_service.py
tickets_api/utils/: fastapi.py  logging.py
