[tool.poetry]
name = "tickets-api"
version = "0.1.0"
description = ""
authors = ["Juan Baptista <juanctb@gmail.com>"]
readme = "README.md"
packages = [{include = "tickets_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.5" }
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
